--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,18 @@
     "keywords": ["victoire", "PictureComparator", "widget"],
     "homepage": "http://victoire.io",
     "license": "MIT",
+    "keywords"         : [
+        "DCMS",
+        "Victoire",
+        "widget",
+        "FriendsofVictoire",
+        "Picture",
+        "Comparator"
+    ],
     "require": {
         "php"                      : ">=5.3.3",
         "symfony/framework-bundle" : "~2.3",
-        "victoire/victoire"        : "~1.3.0"
+        "victoire/victoire"        : "~1.3"
     },
     "autoload": {
         "psr-0": { "Victoire\\Widget\\PictureComparatorBundle": "" }
