--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["victoire", "PictureComparator", "widget"],
     "homepage": "http://victoire.io",
     "license": "MIT",
-    "keywords"         : [
+    "keywords": [
         "DCMS",
         "Victoire",
         "widget",
@@ -14,19 +14,18 @@
         "Comparator"
     ],
     "require": {
-        "php"                      : ">=5.3.3",
-        "symfony/framework-bundle" : "~2.3",
-        "victoire/victoire"        : "~2.0"
+        "php": ">=5.3.3",
+        "symfony/framework-bundle": "~2.3",
+        "victoire/victoire": ">=2.0.0"
     },
     "autoload": {
         "psr-0": { "Victoire\\Widget\\PictureComparatorBundle": "" }
     },
-    "authors"          : [
+    "authors": [
         {
             "name" : "Leny BERNARD",
             "email": "leny@appventus.com"
         }
     ],
-    "minimum-stability": "dev",
     "target-dir": "Victoire/Widget/PictureComparatorBundle"
 }
